tests/paczka1/fuzzy1/42580315.err
Error in line 1: cCf8by A415 15,6
Error in line 3: y6YytW3mKO S101 24,9
Error in line 27: AxIh7YNLcW A415 89,0
Error in line 18: cCf8by S614 97,4
Error in line 33: A415 S101 92,3
Error in line 38: A415 A366 5,3
